# egts_client

./: .clang-format  .gitignore  1.cpp  CMakeLists.txt  INSTALL.md  README.md  auth.cpp  globals.h  helper.cpp  main.cpp  main_async.cpp  my_file_reader.cpp  my_file_save.cpp  my_globals.h  my_reader.cpp  queue.cpp  queue.h  reader.cpp  rebuild.sh  run.sh  run_test.sh  test.cpp
lib/: .~lock.egts.docx#  CMakeLists.txt
lib/boost/lib/: libboost_atomic.so.1.86.0  libboost_charconv.so.1.86.0  libboost_chrono.so.1.86.0  libboost_container.so.1.86.0  libboost_context.so.1.86.0  libboost_contract.so.1.86.0  libboost_coroutine.so.1.86.0  libboost_date_time.so.1.86.0  libboost_fiber.so.1.86.0  libboost_filesystem.so.1.86.0  libboost_graph.so.1.86.0  libboost_iostreams.so.1.86.0  libboost_json.so.1.86.0  libboost_locale.so.1.86.0  libboost_log.so.1.86.0  libboost_log_setup.so.1.86.0  libboost_math_c99.so.1.86.0  libboost_math_c99f.so.1.86.0  libboost_math_c99l.so.1.86.0  libboost_math_tr1.so.1.86.0  libboost_math_tr1f.so.1.86.0  libboost_math_tr1l.so.1.86.0  libboost_nowide.so.1.86.0  libboost_prg_exec_monitor.so.1.86.0  libboost_process.so.1.86.0  libboost_program_options.so.1.86.0  libboost_random.so.1.86.0  libboost_regex.so.1.86.0  libboost_serialization.so.1.86.0  libboost_stacktrace_addr2line.so.1.86.0  libboost_stacktrace_backtrace.so.1.86.0  libboost_stacktrace_basic.so.1.86.0  libboost_stacktrace_from_exception.so.1.86.0  libboost_stacktrace_noop.so.1.86.0  libboost_system.so.1.86.0  libboost_thread.so.1.86.0  libboost_timer.so.1.86.0  libboost_type_erasure.so.1.86.0  libboost_unit_test_framework.so.1.86.0  libboost_url.so.1.86.0  (+2 more)
lib/boost/lib/cmake/boost_atomic-1.86.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
lib/boost/lib/cmake/boost_charconv-1.86.0/: boost_charconv-config.cmake  libboost_charconv-variant-shared.cmake  libboost_charconv-variant-static.cmake
lib/boost/lib/cmake/boost_chrono-1.86.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake  libboost_chrono-variant-static.cmake
lib/boost/lib/cmake/boost_container-1.86.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake  libboost_container-variant-static.cmake
lib/boost/lib/cmake/boost_context-1.86.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
lib/boost/lib/cmake/boost_contract-1.86.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
lib/boost/lib/cmake/boost_coroutine-1.86.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-shared.cmake  libboost_coroutine-variant-static.cmake
lib/boost/lib/cmake/boost_date_time-1.86.0/: boost_date_time-config.cmake  libboost_date_time-variant-shared.cmake  libboost_date_time-variant-static.cmake
lib/boost/lib/cmake/boost_exception-1.86.0/: boost_exception-config.cmake
lib/boost/lib/cmake/boost_fiber-1.86.0/: boost_fiber-config.cmake  libboost_fiber-variant-shared.cmake  libboost_fiber-variant-static.cmake
lib/boost/lib/cmake/boost_filesystem-1.86.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-shared.cmake  libboost_filesystem-variant-static.cmake
lib/boost/lib/cmake/boost_graph-1.86.0/: boost_graph-config.cmake  libboost_graph-variant-shared.cmake  libboost_graph-variant-static.cmake
lib/boost/lib/cmake/boost_graph_parallel-1.86.0/: boost_graph_parallel-config.cmake
lib/boost/lib/cmake/boost_headers-1.86.0/: boost_headers-config.cmake
lib/boost/lib/cmake/boost_iostreams-1.86.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-shared.cmake  libboost_iostreams-variant-static.cmake
lib/boost/lib/cmake/boost_json-1.86.0/: boost_json-config.cmake  libboost_json-variant-shared.cmake  (+1 more)
lib/egts/: CMakeLists.txt  egts.h  global.h  globals.h
lib/egts/crc/: CMakeLists.txt  crc.h
lib/egts/crc/crc_tests/: crc_tests.cpp
lib/egts/crc/tests/: CMakeLists.txt  crc_tests.cpp
lib/egts/error/: CMakeLists.txt  error.h
lib/egts/record/: CMakeLists.txt  record.cpp  record.h
lib/egts/record/record_tests/: CMakeLists.txt  record_tests.cpp
lib/egts/record/subrecord/: CMakeLists.txt  subrecord.cpp  subrecord.h
lib/egts/subrecord/: subrecord.cpp  subrecord.h
lib/egts/subrecord/sr_record_response/: CMakeLists.txt  sr_record_response.cpp  sr_record_response.h
lib/egts/subrecord/sr_result_code/: sr_result_code.cpp  sr_result_code.h
lib/egts/subrecord/sr_term_identity/: sr_term_identity.cpp  sr_term_identity.h
lib/egts/subrecord/subrecord_tests/: CMakeLists.txt  subrecord_tests.cpp
lib/egts/transport/: CMakeLists.txt  all.hpp  error.hpp  packet_type.hpp  parse_step_1.hpp  priority.hpp  test_transport.cpp  transport.cpp  transport.h  transport.hpp
lib/egts/transport/tests/: CMakeLists.txt  parse_step_1.hpp  transport_tests.cpp
lib/egts/transport/transport_tests/: CMakeLists.txt  transport_tests.cpp
lib/endian/: CMakeLists.txt  endian.hpp
lib/gui/: CMakeLists.txt  file_model.cpp  file_model.h  network_client_model.h
lib/include/: i_file_model.h  i_network_model.h
lib/io/: reader.h
lib/modules/: CMakeLists.txt
lib/modules/include/: network_model.h
lib/modules/terminal/: network_model.h
lib/pub_sub/: CMakeLists.txt  pub_sub.h
lib/pub_sub/tests/: tests.cpp
lib/qt/: CMakeLists.txt  file_model.cpp  file_model.h  network_client_model.cpp  network_model.cpp  network_model.h
lib/randy/: CMakeLists.txt  randy.hpp
lib/state/: state.h
lib/terminal/: CMakeLists.txt  file_model.cpp  file_model.h  network_client_model.cpp  network_client_model.h  network_model.cpp  network_model.h
old/egts/: CMakeLists.txt  globals.h
old/egts/crc/: crc.h
old/egts/crc/crc_tests/: CMakeLists.txt
old/egts/error/: CMakeLists.txt  error.h
old/egts/record/: CMakeLists.txt  record.cpp
old/egts/record/record_tests/: record_tests.cpp
old/egts/record/subrecord/: CMakeLists.txt  subrecord.cpp
old/egts/transport/: CMakeLists.txt  transport.cpp
old/egts/transport/transport_tests/: transport_tests.cpp
(+184 files in other folders)
